examples/test/testpolicy7893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7893
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key11: value19
      key29: value1
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value11
          key44: value0
      podSelector:
        matchLabels:
          key49: value25
